# Bartending-Robot

./: .gitmodules  README.md  ubi_final.py
bartending_gripper/: CMakeLists.txt  package.xml
bartending_gripper/include/: bartending_gripper.hpp
bartending_gripper/src/: bartending_gripper.cpp
bartending_gripper_service/: CMakeLists.txt  package.xml
bartending_gripper_service/include/: bartending_gripper_service.hpp
bartending_gripper_service/launch/: gripper_service.launch
bartending_gripper_service/src/: bartending_gripper_service.cpp
bartending_gripper_service/srv/: CloseGripper.srv
bartending_moveit_planner/: .setup_assistant  CMakeLists.txt  package.xml
bartending_moveit_planner/config/: bartending_robot_arm.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
bartending_moveit_planner/launch/: bartending_robot_arm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
bartending_moveit_service/: CMakeLists.txt  package.xml
bartending_moveit_service/include/: bartending_moveit_service.hpp
bartending_moveit_service/launch/: moveit_bridge.launch
bartending_moveit_service/src/: bartending_moveit_service.cpp
bartending_robot_bringup/: CMakeLists.txt  package.xml
bartending_robot_bringup/config/: robot_arm.yaml
bartending_robot_bringup/launch/: bringup.launch  bringup_sim.launch  demo.launch  dynamixel_controller.launch  moveit.launch
bartending_robot_description/: CMakeLists.txt  package.xml
bartending_robot_description/urdf/: bartending_robot_arm.urdf
bartending_server/: CMakeLists.txt  package.xml
bartending_server/include/: bartending_server.hpp
bartending_server/launch/: bartending_server.launch
bartending_server/src/: bartending_server.cpp
bartending_server/srv/: BartenderCocktailRequest.srv
dynamixel-workbench/dynamixel_workbench_controllers/: CMakeLists.txt
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: dynamixel_workbench_controllers_mod.h
dynamixel-workbench/dynamixel_workbench_controllers/src/: dynamixel_workbench_controllers_mod.cpp
moveit_planner_post_processor/: CMakeLists.txt  package.xml
moveit_planner_post_processor/include/: moveit_planner_post_processor.hpp
moveit_planner_post_processor/src/: moveit_planner_post_processor.cpp
