<?xml version="1.0"?>
<package format="2">
  <name>bartending_gripper_service</name>
  <version>0.0.1</version>
  <description>bartending_gripper_service</description>
  <license>Apache 2.0</license>
  <author email="yoplocheo@gmail.com">Cheo Kee Jin</author>
  <maintainer email="yoplocheo@gmail.com">Cheo Kee Jin</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>cmake_modules</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
